<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#33000000"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/days_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:text="@string/Days"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/days_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_text_padding"
        android:background="@color/white"
        android:digits="0123456789"
        android:maxLength="8"
        android:inputType="number"
        android:minWidth="80dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/days_text"
        app:layout_constraintStart_toEndOf="@id/days_text"
        app:layout_constraintTop_toTopOf="@id/days_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:backgroundTint="@color/red"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="@id/days_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/days_text" />

    <TextView
        android:id="@+id/start_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:text="@string/start_date"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@id/days_text"
        app:layout_constraintTop_toBottomOf="@id/days_text" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:background="@color/white"
        android:theme="@style/DatePickerDialogTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date_text" />
</androidx.constraintlayout.widget.ConstraintLayout>