<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="lvm"
            type="lobna.c3s.task.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/circleshadow_light" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:visibility="@{lvm.isLoggedInObservable() ? View.GONE : View.VISIBLE, default=visible}"
            app:layout_constraintBottom_toTopOf="@id/username_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_large"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_large"
            android:visibility="@{lvm.isLoggedInObservable() ? View.GONE : View.VISIBLE, default=visible}"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:error="@{lvm.usernameErrorObservable}"
            app:errorIconTint="@color/white"
            app:errorTextColor="@color/white"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:text="@={lvm.usernameObservable}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_xlarge"
            android:gravity="center"
            android:onClick="@{lvm::login}"
            android:paddingTop="@dimen/margin_padding_size_small"
            android:paddingBottom="@dimen/margin_padding_size_small"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:visibility="@{lvm.isLoggedInObservable() ? View.GONE : View.VISIBLE, default=visible}"
            app:backgroundTint="@color/white"
            app:cornerRadius="25dp"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/username_input"
            app:layout_constraintStart_toStartOf="@id/username_input" />

        <TextView
            android:id="@+id/logged_in_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_large"
            android:layout_marginEnd="@dimen/margin_padding_size_large"
            android:gravity="center"
            android:text="@{@string/welcome + ' ' + lvm.usernameObservable}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:visibility="@{lvm.isLoggedInObservable() ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>